Contexto de apilamiento sin position

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
                     así el segundo este después en el html.</p>
 
 <hr>
+            <h3>Sin la propiedad de position</h3>
+                <p>Este caso es cuando al o los elementos se les da un desplazamiento mediante margin negativo, pero ninguno tiene position declarada.</p>
+                <p class="bloques">Elemento 1</p>
+                <p class="bloques position__6">Elemento 2</p>
+                <p>El elemento 2 tiene las propiedades de: margin-top: -80px; margin-left: 30px;</p>
+                <p>Así sin la necesidad de colocar position, ya se puede desplazar un elemento y colocarlo encima del otro.</p>
+
 
         </section>
 
