--- a/index.html
+++ b/index.html
@@ -205,6 +205,45 @@
 
 
 
+<!-- Inicio ViewPort-->
+        <section>
+            <h2>Viewport</h2>
+            <p>Esta medida, toma como raíz el tamaño de la ventana del navegador o el área visible sin hacer scroll</p>
+            <p>Teniendo valores como:</p>
+            <ul>
+                <li>Vw (Viewport width ó ancho del viewport)</li>
+                <li>Vh (Viewport height ó alto del viewport)</li>
+                <li>Vmin (Viewport mínimo) </li>
+                <li>Vmax (Viewport máximo) </li>
+            </ul>
+            <p>Y para asignar un tamaño con esta medida se debe colocar, por ejemplo: height: 1vw; lo que equivaldría a 1% del alto de la ventana de visualización </p>
+<hr>
+        <!-- Viewport width  -->
+            <h3>Viewport width</h3>
+            <div class="viewport vw">.</div>
+            <p>Este elemento tiene un tamaño de width: 10vw; y height: 5vw; o un 10% y un 5% respecto al <strong>Ancho</strong> de la ventana navegador</p>
+<hr>
+        <!-- Viewport height  -->
+            <h3>Viewport height</h3>
+            <div class="viewport vh">.</div>
+            <p>Este elemento tiene un tamaño de width: 15vh; y height: 8vh; o un 15% y un 8% respecto al <strong>Alto</strong> del navegador</p>
+<hr>
+        <!-- Viewport min  -->
+            <h3>Viewport min</h3>
+            <div class="viewport vmin">.</div>
+            <p>Este elemento tiene un tamaño de width: 20vmin; y height: 12vmin; o un 20% y un 12% de la parte <strong>Más Pequeña, </strong> (ancho o largo) de la ventana del navegador</p>
+<hr>
+        <!-- Viewport max  -->
+            <h3>Viewport max</h3>
+            <div class="viewport vmax">.</div>
+            <p>Este elemento tiene un tamaño de width: 20vmax; y height: 12vmax; o un 20% y un 12% de la parte <strong>Más Grande</strong>, (ancho o largo) del navegador</p>
+        </section>
+
+<!-- Fin ViewPort -->
+
+
+
+
     </main>
 
 
