--- a/index.html
+++ b/index.html
@@ -243,6 +243,48 @@
 
 
 
+<!-- Colores en Css-->
+        <section>
+            <h2>Colores en Css</h2>
+            <p>Para dar color a los elementos en css existen varios formatos:</p>
+
+        <!-- Tabla de colores -->
+            <table class="tabla__colores">
+                <thead>
+                    <th>Formato</th>
+                    <th>Ejemplo</th>
+                </thead>
+
+                <tbody>
+            <!-- Hexadecimal -->
+                    <tr class="hexa">
+                        <td>Hexadecimal</td>
+                        <td>#CA6D94</td>
+                    </tr>
+            <!-- RGB -->
+                    <tr class="rgb">
+                        <td>RGB (red, green, blue)</td>
+                        <td>rgb(202, 109, 148)</td>
+                    </tr>
+            <!-- RGBA -->
+                    <tr class="rgba">
+                        <td>RGBA (red, green, blue, opacidad)</td>
+                        <td>rgba(202, 109, 148, 0.687)</td>
+                    </tr>
+            <!-- HSL -->
+                    <tr class="hsl">
+                        <td>HSL (tono, saturación, luminosidad) </td>
+                        <td>hsl(335, 47%, 61%)</td>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+            <p>Los tres formatos sirven para dar la misma cantidad de colores. </p>
+
+        </section>
+
+<!-- Fin Colores en css -->
+
 
     </main>
 
